release steps no longer needed